# benchmark-bigquery

./: .gitignore  README.md  pyproject.toml
queries/: ssb-qv1.1.yaml  ssb.py  ssb.yaml  tpc_h.yaml
src/benchmark_bigquery/: benchmark.py  config.py  convert_output_to_excel.py
